# osm-budynki-orto-import

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Makefile  Pipfile  README.md  box.py  budynki.py  check_on_osm.py  config.py  cuda-shell.nix  dataset.py  db_added.py  db_grid.py  default.nix  main.py  merge_lines.py  model.py  openstreetmap.py  orto.py  overpass.py  polygon.py  processor.py  pyproject.toml  score_lines.py  shell.nix  transform_px_geo.py  tuned_model.py  utils.py
data/: model.json
dataset/0/: -3RlAJi4.json  -9HR_OHN.json  -cIMFPyY.json  -v-UnMbw.json  -wtdK0Ds.json  0C0o0cW9.json  0Dyizohx.json  0ODCcWw5.json  0bbcQ1kv.json  0kjldQ6x.json  1I7F-p8p.json  1JgqsnJ-.json  1LkCRehE.json  1Yu96Wi2.json  1ogo02Xh.json  24cs5uH7.json  26fENpfp.json  2mi8GIO_.json  2qb1Xdw1.json  34dT4wDl.json  39yCUHoe.json  3AiINb-I.json  3I_afMWj.json  3ZD5tupt.json  442KFP9M.json  466nOcEM.json  4GkuZwWs.json  4K96lxJK.json  4j1I4vED.json  4t3lwBJO.json  65AjKZ6T.json  7-plc53_.json  7XSUNfgh.json  84NFrdR2.json  89b6L8Ck.json  8LGK43_S.json  8TTv1ml3.json  9a4qkw1u.json  AemTVp_M.json  AjWdV_bZ.json  (+217 more)
dataset/1/: -2y0EdE2.json  -6PQwBQ3.json  -7V8E8pz.json  -8SPEU7p.json  -By4KqSf.json  -IM2nwc4.json  -IxJCjyX.json  -KXpMQHi.json  -UmdA71W.json  -WZ0Yifr.json  -_KTOjRZ.json  -a8oYezT.json  -dh-oKjw.json  02BYTWSt.json  03bgRHZP.json  073a4_Fc.json  0DwStFvT.json  0KGuUkF9.json  0L5F85xZ.json  0T5BM6fP.json  0YIAivX4.json  0_BF4r3h.json  0bycGsdv.json  0iv2Yasq.json  0jcqhPfI.json  0jyc_E06.json  0ndKuUvh.json  0oswl4Jq.json  (+1292 more)
model/: model.h5  params.json
(+8560 files in other folders)
