[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "osm-budynki-orto-import"
version = "0.0.0"

[tool.poetry.dependencies]
httpx = {extras = ["brotli", "http2"], version = "^0.26.0"}
lightgbm = "^4.2.0"
networkx = "^3.2.1"
numpy = "^1.26.3"
orjson = "^3.9.10"
pandas = "^2.1.4"
pymongo = "^4.6.1"
pyproj = "^3.6.1"
python = "~3.11"
rtree = "^1.1.0"
scikit-image = "^0.22.0"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
shapely = "^2.0.2"
tenacity = "^8.2.3"
tensorflow = "^2.14"
tinydb = "^4.8.0"
xmltodict = "^0.13.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
